Fixes figcaption height on small screens

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -3338,6 +3338,7 @@ h3 {
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
 .figure-card {
+  display: flex;
   margin-left: 0;
   margin-right: 0;
   margin-top: 0;
